[tool.poetry]
name = "bento-lib"
version = "11.11.1"
description = "A set of common utilities and helpers for Bento platform services."
authors = [
    "David Lougheed <david.lougheed@mail.mcgill.ca>",
    "Paul Pillot <paul.pillot@computationalgenomics.ca>",
]
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/bento-platform/bento_lib"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
packages = [
    { include = "bento_lib" }
]
include = [
    "bento_lib/schemas/*.json",
    "bento_lib/package.cfg",
]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.2.1"
aiohttp = ">=3.9.4,<4"
asyncpg = { version = ">=0.29.0,<0.30.0", optional = true }
django = { version = ">=4.2.7,<5.1", optional = true }
djangorestframework = { version = ">=3.14.0,<3.16", optional = true }
fastapi = { version = ">=0.104,<0.112", optional = true }
flask = { version = ">=2.2.5,<4", optional = true }
jsonschema = ">=4.20.0,<5"
psycopg2-binary = ">=2.9.9,<3.0"
pydantic = ">=2.5.2,<3"
pydantic-settings = ">=2.1.0,<3"
redis = ">=5.0.1,<6"
requests = ">=2.31.0,<3"
werkzeug = ">=2.2.3,<4"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.6"
coverage = "^7.4.1"
flake8 = "^7.0.0"
httpx = "^0.27.0"
mypy = "~1.10.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-django = "^4.8.0"
python-dateutil = "^2.8.2"
responses = "^0.25.0"
tox = "^4.13.0"
types-aiofiles = "^23.2.0.20240106"
types-colorama = "^0.4.15.20240205"
types-cryptography = "^3.3.23.2"
types-jsonschema = "^4.21.0.20240118"
types-psycopg2 = "^2.9.21.20240201"
types-pyopenssl = "^24.0.0.20240130"
types-pyyaml = "^6.0.12.12"
types-redis = "^4.6.0.20240106"
types-requests = "^2.31.0.20240125"
types-toml = "^0.10.8.7"
types-urllib3 = "^1.26.25.14"

[tool.poetry.extras]
asyncpg = ["asyncpg"]
flask = ["flask"]
django = ["django", "djangorestframework"]
fastapi = ["fastapi"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
