[tool.poetry]
name = "bento-lib"
version = "14.0.1"
description = "A set of common utilities and helpers for Bento platform services."
authors = [
    "David Lougheed <david.lougheed@mail.mcgill.ca>",
    "Paul Pillot <paul.pillot@computationalgenomics.ca>",
]
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/bento-platform/bento_lib"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
packages = [
    { include = "bento_lib" }
]
include = [
    "bento_lib/schemas/*.json",
    "bento_lib/package.cfg",
]

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = ">=24.1.0,<26"
aiohttp = ">=3.10.10,<4"
asyncpg = { version = ">=0.29.0,<0.31.0", optional = true }
django = { version = ">=5.1.8,<5.3", optional = true }
djangorestframework = { version = ">=3.16.0,<3.17", optional = true }
fastapi = { version = ">=0.115.12,<0.122", optional = true }
flask = { version = ">=3.0.3,<4", optional = true }
jsonschema = ">=4.23.0,<5"
psycopg2-binary = ">=2.9.9,<3.0"
pydantic = ">=2.11.3,<3"
pydantic-settings = ">=2.8.1"
redis = ">=5.2.1,<7"
requests = ">=2.32.3,<3"
rich = ">=14.0.0,<15"  # for logger exception formatting in development
structlog = ">=25.2.0,<26"
uvicorn = { version = "*", optional = true }
werkzeug = ">=3.0.6,<4"
geojson-pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.6"
coverage = "^7.4.1"
httpx = "^0.28.1"
mypy = "~1.18.2"
pytest = "^8.3.2"
pytest-asyncio = "^1.0.0"
pytest-cov = "^7.0.0"
pytest-django = "^4.11.1"
python-dateutil = "^2.8.2"
responses = "^0.25.0"
ruff = "^0.14.0"
tox = "^4.13.0"
types-aiofiles = "^25.1.0.20251011"
types-colorama = "^0.4.15.20240205"
types-cryptography = "^3.3.23.2"
types-jsonschema = "^4.21.0.20240118"
types-psycopg2 = "^2.9.21.20240201"
types-pyopenssl = "^24.0.0.20240130"
types-pyyaml = "^6.0.12.12"
types-redis = "^4.6.0.20240106"
types-requests = "^2.31.0.20240125"
types-toml = "^0.10.8.7"
types-urllib3 = "^1.26.25.14"

[tool.poetry.extras]
asyncpg = ["asyncpg"]
flask = ["flask"]
django = ["django", "djangorestframework"]
fastapi = ["fastapi", "uvicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"
